2005-08-10  Marc Singer  <elf@buici.com>

	* src/apex/command.c (exec_monitor): Removed leading whitespace in
	startup command reports.

2005-08-08  Marc Singer  <elf@buici.com>

	* src/apex/cmd-copy.c (cmd_copy): Detecting copy errors and
	returning appropriate error code.

	* src/apex/command.c (exec_monitor): Fixed parser for startup
	command so that semicolon no longer needed at the end of the
	command.  Fixed a bug in the routine that writes to address zero
	on startup.

	* src/apex/console.c (console_poll): Improved methods for
	detecting user break condition.  Injected a meta-driver between
	the serial driver and the functions that communicate with the
	user.

2005-08-03  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/ads7843.c: ads7843 test command.

2005-08-01  Marc Singer  <elf@buici.com>

	* src/net/ipconfig.c (cmd_ipconfig): IP configuration via RARP or
	manual configuration.

	* src/mach-lh7952x/drv-emac.c (cmd_emac): Some grooming of the
	diagnostic outputs.

	* src/net/tftp.c (ping_terminate): Fixed abort of tftp by
	keystroke.

	* src/mach-lh7952x/drv-emac.c (eth_read): Check for buffer looping
	on read.  This is untested.

2005-07-29  Marc Singer  <elf@buici.com>

	* src/net/tftp.c: fixed the tftp state machine and tested that
	retries work correctly.   it seems to be stable and reliable in
	light of packet losses.

	* src/apex/cmd-copy.c (cmd_copy): Fixed a long-standing bug in the
	copy command where the din descriptor was being opened twice.
	
2005-07-28  Marc Singer  <elf@buici.com>

	* src/drivers/drv-smc91x.c: Implemented smc91x driver which is
	available to both the lpd79520 and the lpd7a40x boards.
 
	* src/mach-lh7952x/init-lpd79520.c: Fixed the initialization of
	the memory region where CF is found.  CF driver working again.
 
2005-07-11  Marc Singer  <elf@buici.com>

	* src/apex/cmd-dump.c (cmd_dump): Added dump display width to make
	it easier to read registers and machine code.

2005-07-07  Marc Singer  <elf@buici.com>
